[package]
name = "koumakan-frontend"
version = "0.1.0"
authors = ["RemiliaForever <remilia@koumakan.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.10.0"
stdweb = "0.4.20"
web_logger = "0.2.0"
log = "0.4.8"
